--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,3 +1,11 @@
+body {
+display: inline; 
+/*this is like a parent container and the section and main are it's children
+so the body is 'inline' and the children are blocks inline with it or something like
+that. */
+max-width: 960px;
+}
+
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
@@ -9,24 +17,65 @@ cite {
   margin-top: 10px;
 }
 
+#external-links {
+/*float:left; works the same as display: inline-block; sorta
+there is some difference on where the center of the thing is and
+on whitespace handling*/
+display: inline-block;
+vertical-align: top;
+width: 15%;
+border:  1px solid gray;
+}
+
 #external-links ul {
-  list-style-type: none;
-  padding-left: 0px;
+
+list-style-type: none;
+/* I think this is like <li></li><li></li>
+and not : <li></li>
+          <li></li> 
+          <li></li>
+          as if on another line. don't know why this maters
+          but it seems to.
+in other words if the html were across not verticle , idk*/
+padding-left: 0px;
+  
+}
+main {
+  width: 70%;
+  display: inline-block;
+  /*again float: left; can also work*/
+  vertical-align: top;
+  border: 1px solid black;
 }
 
 /* you're welcome to edit the
 image, figure, and figcaption CSS if you'd like, 
 but it's optional! */
-img {
+img { 
+
   width: 100%;
 }
-
 figure {
   margin-left: 0px;
-  margin-right: 0px;
+  margin-right: 20px;
 }
 
 figcaption {
   font-style: italic;
   text-align: right;
 }
+
+@media screen and (max-width: 500px) {
+  body {
+    background-color: hotpink;
+    font-size: .9em;
+  }
+}
+@media screen and (max-width: 250px) {
+  body {
+    font-size: 60%;
+  }
+}
+
+
+
