commit all including old files

--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -22,8 +22,9 @@ cite {
 there is some difference on where the center of the thing is and
 on whitespace handling*/
 display: inline-block;
+max-width: 90px;
+
 vertical-align: top;
-width: 15%;
 border:  1px solid gray;
 }
 
