Rename confusing students to class

--- a/web_dev/sinatra_templating/views/home.erb
+++ b/web_dev/sinatra_templating/views/home.erb
@@ -6,7 +6,8 @@
 <body>
   <h1>Student Management System</h1>
   <p>Welcome to the student management system.</p>
-  <p>Click <a href="students/new">here</a> to create a new student.</p>
+  <p>Click <a href="class/new">here</a> to create a new student.</p>
+  <p>Click <a href="class/diets">here</a> to update diet.
   <ul>
     <% @students.each do |student| %>
       <li><%= student['name'] %>, <%= student['age'] %></li>
