--- a/web_dev/sinatra_templating/views/index.erb
+++ b/web_dev/sinatra_templating/views/index.erb
@@ -6,10 +6,10 @@
 <body>
   
   <% @students.each do |student| %>
-  <%= student['name'] %>, <%=student['diet'] %>
+  <%= student['name'] %> :  <%=student['diet'] %> |
   <% end %>
 
-  <form action="/students" method="POST">  
+  <form action="/class" method="POST">  
     <input type="name" name="name" placeholder="name">
     <input type="text" name="diet" placeholder="diet">
     <button type="submit">SAVE</button>
